# UF_OpenGL

./: .gitignore
OpenGLPlayground/: .gitignore  CMakeLists.txt  README.md  debug.sh  imgui.ini  try_to_impl_stencil.patch
OpenGLPlayground/asset/: bunny.blend  octahedron.mtl
OpenGLPlayground/asset/robot-arm/: robot-arm.mtl
OpenGLPlayground/asset/shader/: p1_Picking.fragmentshader  p1_Picking.vertexshader  p1_StandardShading.vertexshader
OpenGLPlayground/common/: CMakeLists.txt  shader.cpp  shader.hpp  text2D.cpp  texture.cpp  vboindexer.cpp  vboindexer.hpp
OpenGLPlayground/misc05_picking/: BSplineCurve.cpp  BezierCurve.cpp  BezierCurve.h  CMakeLists.txt  CatmullRomCurve.cpp  CatmullRomCurve.h  FrenetSerret.cpp  FrenetSerret.h  Geometry.h  p1  p1_Picking.vertexshader  p1_source.cpp
OpenGLPlayground/project1/: BSplineCurve.h  BezierCurve.h  CatmullRomCurve.cpp  FrenetSerret.h  p1_source.cpp
OpenGLPlayground/project2/: CMakeLists.txt  Camera.h  Core.h  Entity.cpp  Entity.h  Log.cpp  Log.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Renderer.cpp  Renderer.h  RendererAPI.cpp  RendererAPI.h  RendererData.cpp  RendererData.h  StandardShading.frag  Utils.cpp  Utils.h  Vertex.h  main.cpp
OpenGLPlayground/project2/shaders/: StandardShading.frag  StandardShading.vert
OpenGLPlayground/project3/: Application.cpp  Application.h  CMakeLists.txt  Camera.cpp  Camera.h  Core.h  Log.cpp  Log.h  Mesh.h  Model.cpp  Model.h  OpenGLApplication.cpp  OpenGLApplication.h  OpenGLRenderAPI.cpp  OpenGLRenderAPI.h  PNTriangle.cpp  PNTriangle.h  README.md  RenderAPI.h  Renderer.cpp  Renderer.h  RendererAPI.cpp  RendererAPI.h  Texture.cpp  Texture.h  Utils.cpp  Utils.h  Vertex.h  main.cpp
OpenGLPlayground/project3/assets/model/: boat.mtl  boat_.mtl
OpenGLPlayground/project3/shaders/: Geo.frag  Geo.geom  Geo.vert  Picking.frag  Quad.frag  Quad.tesc  Quad.tese  Quad.vert  StandardShading.frag  StandardShading.vert  Tess.frag  Tess.tesc  Tess.tese  Tess.vert  texture.frag  texture.vert
OpenGLPlayground/tutorial01_first_window/: CMakeLists.txt  main.cpp
OpenGLPlayground/tutorial02_red_triangle/: CMakeLists.txt  main.cpp
OpenGLPlayground/webGL_P1/: webgl-p1_source.html
OpenGLPlayground/webGL_P1/resources/: webgl-utils.js
Test/: CMakeLists.txt  head.h  main.cpp
